<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">


    <EditText
        android:id="@+id/first_number_edit_text"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/first_number"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/second_number_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/first_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/second_number_edit_text"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/second_number"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/equals_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/second_text_value"
        app:layout_constraintTop_toBottomOf="@+id/first_number_edit_text" />

    <Button
        android:id="@+id/equals_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eq"
        app:layout_constraintBottom_toTopOf="@+id/result_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_text_value" />

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equals_button" />

    <TextView
        android:id="@+id/first_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_value"
        app:layout_constraintBottom_toTopOf="@+id/second_text_value"
        app:layout_constraintEnd_toStartOf="@+id/first_number_edit_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/second_text_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_value"
        app:layout_constraintBottom_toTopOf="@+id/equals_button"
        app:layout_constraintEnd_toStartOf="@+id/second_number_edit_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_text_view" />

</android.support.constraint.ConstraintLayout>